--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3D Game Design WebGL.loader.js";
+      var loaderUrl = buildUrl + "/test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3D Game Design WebGL.data.gz",
-        frameworkUrl: buildUrl + "/3D Game Design WebGL.framework.js.gz",
-        codeUrl: buildUrl + "/3D Game Design WebGL.wasm.gz",
+        dataUrl: buildUrl + "/test.data.br",
+        frameworkUrl: buildUrl + "/test.framework.js.br",
+        codeUrl: buildUrl + "/test.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Game Design Test",
